--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "strict": true
+    
+    "strict": true,
+
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   }
 }
